# dolphin-mcp

./: .env.example  .gitignore  GITHUB_AUTH.md  README.md  REASONING.md  config.yml  demo_long_fields.py  demo_reasoning.py  demo_reasoning_tokens.py  dolphin-mcp.py  dolphin_mcp.py  dolphin_mcp_cli.py  mcp_config _ollama_sample.json  mcp_config.json  mcp_config_lmstudio_sample.json  mcp_config_ollama_sample.json  publish.sh  pyproject.toml  requirements.txt  setup_db.py  test_config.yml  test_integration.py  test_long_fields.py  test_mcp_config.json  test_openai_provider.py  test_reasoning_basic.py  test_reasoning_fix.py  test_reasoning_model.py  test_reasoning_tokens.py  test_reasoning_trace_fix.py  test_sse_transport.py  test_tool_format_fix.py
config/: sample_config.json
examples/: README.md  dolphin_query.py  filesystem-fetch-mcp.json  github_auth_example.md  github_auth_setup.md  setup_dolphin_db.py  sqlite-mcp.json  sse-mcp.json  stocklist.txt
examples/config_examples/: README.md  browser_search_config.json  browser_search_query.py  communication_config.json  communication_query.py  database_config.json  database_query.py  developer_config.json  developer_query.py  finance_config.json  finance_query.py  github_filesystem_config.json  github_filesystem_query.py  knowledge_config.json  knowledge_query.py  location_config.json  location_query.py  monitoring_config.json  monitoring_query.py  weather_news_config.json  weather_news_query.py
examples/config_examples/tests/: run_tests.py  test_base.py  test_browser_search.py  test_communication.py  test_configs.py  test_database.py  test_developer.py  (+8 more)
src/: ASOL Infrastructure Cost.xlsx  Test Olaf.xlsx  config.yml  dolphin_mcp.py  mcp_config.json  notes-testcase.txt  run_mcp.py  test_reasoning.py
src/dolphin_mcp/: __init__.py  cli.py  client.py  reasoning.py  utils.py
tests/: __init__.py  dolphin_mcp_test.py
tests/auth/: __init__.py  test_factory.py  test_github_provider.py  test_integration.py
(+27 files in other folders)
